# Ai-CEO-Agent

./: API_Key.py  README.md  app.py  data_cleaning.ipynb  main.ipynb  pyproject.toml  requirements.txt  setup.sh
01_Data_Collection/: 01_sap_news.ipynb  02_gnew.ipynb  03_Merging_Data.ipynb
01_Data_Collection_cleaned/: 01_sap_news.ipynb  02_gnew.ipynb  03_Merging_Data.ipynb  03_hackernews.ipynb  04_Merging_Data.ipynb
agents/: 01_opportunity_agent.ipynb  02_risk_agent.ipynb  03_trend_agent.ipynb  04_competitor_monitor.ipynb  05_ceo_agent.ipynb
data/: Merged_data.json  chunk_embeddings.npy  chunked_data.json  clean_data.json  gnews_articles.json  sap_intelligence.index  sap_news.json
notebook/: data_cleaning.ipynb  dummy.ipynb  embedding.ipynb  embedding_v2.ipynb
notebook/data/: Merged_data.json  ceo_briefing.json  chunk_embeddings.npy  chunked_data.json  clean_data.json  competitor_activity.json  gnews_articles.json  hackernews_posts.json  opportunities.json  recommendations.json  risks.json  sap_intelligence.index  sap_news.json  trends.json
