[project]
name = "nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.14.3",
    "feedparser>=6.0.12",
    "huggingface-hub>=1.19.0",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.7",
    "langchain-text-splitters",
    "lxml-html-clean",
    "newspaper3k",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "praw>=8.0.1",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.13.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.1",
    "tqdm>=4.68.2",
]
